[package]
name = "conceal-core"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create git tag.
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/conceal/0.1.0/conceal_core/"
repository = "https://github.com/tyrchen/conceal"
homepage = "https://github.com/tyrchen/conceal"
description = """
A file encryption tool that leverage.
"""
readme = "../README.md"
categories = ["cryptography"]
keywords = ["encryption", "security", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
bytes = "0.4"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
memmap = "0.7"
prost = "0.5"
prost-types = "0.5"
snow = { version="0.6", features=["ring-accelerated"] }
thiserror = "1"
tokio = { version = "0.2", features = ["fs", "io-util"] }

[dev-dependencies]
anyhow = "1"
criterion = "0.3"
rand = "0.7"
tempfile = "3"
tokio = { version = "0.2", features = ["macros"]}

[build-dependencies]
prost-build = "0.5"

[[bench]]
name = "bench_conceal"
harness = false
