[package]
name = "conceal"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create git tag.
version = "0.2.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/conceal/0.2.0/conceal/"
repository = "https://github.com/tyrchen/conceal"
homepage = "https://github.com/tyrchen/conceal"
description = """
A file encryption tool that leverage.
"""
readme = "../README.md"
categories = ["command-line-utilities"]
keywords = ["encryption", "security", "cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bs58 = "0.4"
conceal-core = { path = "../conceal-core" }
dirs = "3"
rand = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
